I3: number guessing game complete

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,12 @@
 <html>
   <head></head>
   <body>
-    <p>
-      The secret number is <%= number %>.
-    </p>
+    <p><%= message %></p>  
+
+    <form>
+  <input type='text' name='guess' />
+  <input type='submit' value='Guess!' />
+</form>
+
   </body>
 </html>
