I4: Colorized the output based on guesses

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,5 +1,11 @@
 <html>
-  <head></head>
+  <head>
+  <style>
+      body {
+        background: <%= color %>;
+      }
+    </style>
+  </head>
   <body>
     <p><%= message %></p>  
 
