--- a/views/index.erb
+++ b/views/index.erb
@@ -8,7 +8,7 @@
   </head>
   <body>
     <p><%= message %></p>  
-
+    <p>You have <%= count_guesses %> guesses left.</p> 
     <form>
   <input type='text' name='guess' />
   <input type='submit' value='Guess!' />
