I4: cheat mode added

--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,8 @@
     </style>
   </head>
   <body>
-    <p><%= message %></p>  
+    <p><%= message %></p> 
+    <p> <%= cheat_message %></p>
     <p>You have <%= count_guesses %> guesses left.</p> 
     <form>
   <input type='text' name='guess' />
