--- a/views/index.erb
+++ b/views/index.erb
@@ -9,7 +9,7 @@
   <body>
     <p><%= message %></p> 
     <p> <%= cheat_message %></p>
-    <p>You have <%= count_guesses %> guesses left.</p> 
+    <p>You have <%= count_guesses %> guesses.</p> 
     <form>
   <input type='text' name='guess' />
   <input type='submit' value='Guess!' />
